--- a/style.css
+++ b/style.css
@@ -592,7 +592,7 @@ h2 {
         grid-template-columns: repeat(1, 1fr);
     }
     .quality-item {
-        text-align: left;
+        text-align: center;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -608,6 +608,7 @@ h2 {
         margin: 0 10px;
     }
 }
+
 
 
 
